parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> <empty>
Rule 3     declist -> declist dec
Rule 4     dec -> vardec
Rule 5     vardec -> idlist COLON type SEMICOLON
Rule 6     type -> INTEGER
Rule 7     type -> FLOAT
Rule 8     type -> BOOLEAN
Rule 9     iddec -> ID
Rule 10    iddec -> ID ASSIGN exp
Rule 11    iddec -> ID LSB exp RSB
Rule 12    idlist -> iddec
Rule 13    idlist -> idlist COMMA iddec
Rule 14    exp -> ID ASSIGN exp
Rule 15    exp -> exp SUM exp
Rule 16    exp -> exp SUB exp
Rule 17    exp -> exp DIV exp
Rule 18    exp -> exp MOD exp
Rule 19    exp -> exp MUL exp
Rule 20    exp -> const
Rule 21    exp -> ID
Rule 22    exp -> ID LSB exp RSB
Rule 23    exp -> ID LSB exp RSB ASSIGN exp
Rule 24    exp -> SUB exp
Rule 25    exp -> LRB exp RRB
Rule 26    const -> FLOATNUMBER
Rule 27    const -> INTEGERNUMBER
Rule 28    block -> LCB stmtlist RCB
Rule 29    stmtlist -> stmtlist stmt
Rule 30    stmtlist -> <empty>
Rule 31    stmt -> exp SEMICOLON
Rule 32    stmt -> block
Rule 33    stmt -> vardec
Rule 34    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 35    stmt -> IF LRB exp RRB stmt elseiflist
Rule 36    stmt -> WHILE LRB exp RRB stmt
Rule 37    stmt -> IF LRB exp RRB stmt elseiflist ELSE stmt
Rule 38    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 39    stmt -> FOR LRB ID IN ID RRB stmt
Rule 40    stmt -> ON LRB exp RRB LCB cases RCB SEMICOLON
Rule 41    case -> WHERE const COLON stmtlist
Rule 42    cases -> cases case
Rule 43    cases -> <empty>
Rule 44    elseiflist -> elseiflist ELSEIF LRB exp RRB stmt
Rule 45    elseiflist -> <empty>
Rule 46    exp -> relopexp
Rule 47    relopexp -> exp GT exp
Rule 48    relopexp -> exp LT exp
Rule 49    relopexp -> exp NE exp
Rule 50    relopexp -> exp EQ exp
Rule 51    relopexp -> exp LE exp
Rule 52    relopexp -> exp GE exp
Rule 53    relopexp -> relopexp GT exp
Rule 54    relopexp -> relopexp LT exp
Rule 55    relopexp -> relopexp NE exp
Rule 56    relopexp -> relopexp EQ exp
Rule 57    relopexp -> relopexp LE exp
Rule 58    relopexp -> relopexp GE exp
Rule 59    exp -> exp AND exp
Rule 60    exp -> exp OR exp
Rule 61    exp -> NOT exp
Rule 62    const -> TRUE
Rule 63    const -> FALSE
Rule 64    paramdecs -> paramdecslist
Rule 65    paramdecs -> <empty>
Rule 66    paramdecslist -> paramdec
Rule 67    paramdecslist -> paramdecslist COMMA paramdec
Rule 68    paramdec -> ID COLON type
Rule 69    paramdec -> ID LSB RSB COLON type
Rule 70    exp -> ID LRB RRB
Rule 71    exp -> ID LRB explist RRB
Rule 72    funcdec -> FUNCTION ID LRB paramdecs RRB block
Rule 73    funcdec -> FUNCTION ID LRB paramdecs RRB COLON type block
Rule 74    explist -> exp
Rule 75    explist -> explist COMMA exp
Rule 76    dec -> funcdec
Rule 77    stmt -> RETURN exp SEMICOLON

Terminals, with rules where they appear

AND                  : 59
ASSIGN               : 10 14 23
BOOLEAN              : 8
COLON                : 5 41 68 69 73
COMMA                : 13 67 75
DIV                  : 17
ELSE                 : 37
ELSEIF               : 44
EQ                   : 50 56
ERROR                : 
FALSE                : 63
FLOAT                : 7
FLOATNUMBER          : 26
FOR                  : 38 39
FUNCTION             : 72 73
GE                   : 52 58
GT                   : 47 53
ID                   : 9 10 11 14 21 22 23 34 39 39 68 69 70 71 72 73
IF                   : 35 37
IN                   : 39
INTEGER              : 6
INTEGERNUMBER        : 27
LCB                  : 28 40
LE                   : 51 57
LRB                  : 1 25 34 35 36 37 38 39 40 44 70 71 72 73
LSB                  : 11 22 23 69
LT                   : 48 54
MAIN                 : 1
MOD                  : 18
MUL                  : 19
NE                   : 49 55
NOT                  : 61
ON                   : 40
OR                   : 60
PRINT                : 34
RCB                  : 28 40
RETURN               : 77
RRB                  : 1 25 34 35 36 37 38 39 40 44 70 71 72 73
RSB                  : 11 22 23 69
SEMICOLON            : 5 31 34 38 38 40 77
SUB                  : 16 24
SUM                  : 15
TRUE                 : 62
WHERE                : 41
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

block                : 1 32 72 73
case                 : 42
cases                : 40 42
const                : 20 41
dec                  : 3
declist              : 1 3
elseiflist           : 35 37 44
exp                  : 10 11 14 15 15 16 16 17 17 18 18 19 19 22 23 23 24 25 31 35 36 37 38 38 38 40 44 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 56 57 58 59 59 60 60 61 74 75 77
explist              : 71 75
funcdec              : 76
iddec                : 12 13
idlist               : 5 13
paramdec             : 66 67
paramdecs            : 72 73
paramdecslist        : 64 67
program              : 0
relopexp             : 46 53 54 55 56 57 58
stmt                 : 29 35 36 37 37 38 39 44
stmtlist             : 28 29 41
type                 : 5 68 69 73
vardec               : 4 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> .
    (3) declist -> . declist dec

    MAIN            reduce using rule 2 (declist -> .)
    FUNCTION        reduce using rule 2 (declist -> .)
    ID              reduce using rule 2 (declist -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (3) declist -> declist . dec
    (4) dec -> . vardec
    (76) dec -> . funcdec
    (5) vardec -> . idlist COLON type SEMICOLON
    (72) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (73) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (12) idlist -> . iddec
    (13) idlist -> . idlist COMMA iddec
    (9) iddec -> . ID
    (10) iddec -> . ID ASSIGN exp
    (11) iddec -> . ID LSB exp RSB

    MAIN            shift and go to state 3
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 3

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 11


state 4

    (3) declist -> declist dec .

    MAIN            reduce using rule 3 (declist -> declist dec .)
    FUNCTION        reduce using rule 3 (declist -> declist dec .)
    ID              reduce using rule 3 (declist -> declist dec .)


state 5

    (4) dec -> vardec .

    MAIN            reduce using rule 4 (dec -> vardec .)
    FUNCTION        reduce using rule 4 (dec -> vardec .)
    ID              reduce using rule 4 (dec -> vardec .)


state 6

    (76) dec -> funcdec .

    MAIN            reduce using rule 76 (dec -> funcdec .)
    FUNCTION        reduce using rule 76 (dec -> funcdec .)
    ID              reduce using rule 76 (dec -> funcdec .)


state 7

    (5) vardec -> idlist . COLON type SEMICOLON
    (13) idlist -> idlist . COMMA iddec

    COLON           shift and go to state 12
    COMMA           shift and go to state 13


state 8

    (72) funcdec -> FUNCTION . ID LRB paramdecs RRB block
    (73) funcdec -> FUNCTION . ID LRB paramdecs RRB COLON type block

    ID              shift and go to state 14


state 9

    (9) iddec -> ID .
    (10) iddec -> ID . ASSIGN exp
    (11) iddec -> ID . LSB exp RSB

    COLON           reduce using rule 9 (iddec -> ID .)
    COMMA           reduce using rule 9 (iddec -> ID .)
    ASSIGN          shift and go to state 15
    LSB             shift and go to state 16


state 10

    (12) idlist -> iddec .

    COLON           reduce using rule 12 (idlist -> iddec .)
    COMMA           reduce using rule 12 (idlist -> iddec .)


state 11

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 17


state 12

    (5) vardec -> idlist COLON . type SEMICOLON
    (6) type -> . INTEGER
    (7) type -> . FLOAT
    (8) type -> . BOOLEAN

    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    BOOLEAN         shift and go to state 21

    type                           shift and go to state 18

state 13

    (13) idlist -> idlist COMMA . iddec
    (9) iddec -> . ID
    (10) iddec -> . ID ASSIGN exp
    (11) iddec -> . ID LSB exp RSB

    ID              shift and go to state 9

    iddec                          shift and go to state 22

state 14

    (72) funcdec -> FUNCTION ID . LRB paramdecs RRB block
    (73) funcdec -> FUNCTION ID . LRB paramdecs RRB COLON type block

    LRB             shift and go to state 23


state 15

    (10) iddec -> ID ASSIGN . exp
    (14) exp -> . ID ASSIGN exp
    (15) exp -> . exp SUM exp
    (16) exp -> . exp SUB exp
    (17) exp -> . exp DIV exp
    (18) exp -> . exp MOD exp
    (19) exp -> . exp MUL exp
    (20) exp -> . const
    (21) exp -> . ID
    (22) exp -> . ID LSB exp RSB
    (23) exp -> . ID LSB exp RSB ASSIGN exp
    (24) exp -> . SUB exp
    (25) exp -> . LRB exp RRB
    (46) exp -> . relopexp
    (59) exp -> . exp AND exp
    (60) exp -> . exp OR exp
    (61) exp -> . NOT exp
    (70) exp -> . ID LRB RRB
    (71) exp -> . ID LRB explist RRB
    (26) const -> . FLOATNUMBER
    (27) const -> . INTEGERNUMBER
    (62) const -> . TRUE
    (63) const -> . FALSE
    (47) relopexp -> . exp GT exp
    (48) relopexp -> . exp LT exp
    (49) relopexp -> . exp NE exp
    (50) relopexp -> . exp EQ exp
    (51) relopexp -> . exp LE exp
    (52) relopexp -> . exp GE exp
    (53) relopexp -> . relopexp GT exp
    (54) relopexp -> . relopexp LT exp
    (55) relopexp -> . relopexp NE exp
    (56) relopexp -> . relopexp EQ exp
    (57) relopexp -> . relopexp LE exp
    (58) relopexp -> . relopexp GE exp

    ID              shift and go to state 24
    SUB             shift and go to state 26
    LRB             shift and go to state 28
    NOT             shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    INTEGERNUMBER   shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    exp                            shift and go to state 25
    const                          shift and go to state 27
    relopexp                       shift and go to state 29

state 16

    (11) iddec -> ID LSB . exp RSB
    (14) exp -> . ID ASSIGN exp
    (15) exp -> . exp SUM exp
    (16) exp -> . exp SUB exp
    (17) exp -> . exp DIV exp
    (18) exp -> . exp MOD exp
    (19) exp -> . exp MUL exp
    (20) exp -> . const
    (21) exp -> . ID
    (22) exp -> . ID LSB exp RSB
    (23) exp -> . ID LSB exp RSB ASSIGN exp
    (24) exp -> . SUB exp
    (25) exp -> . LRB exp RRB
    (46) exp -> . relopexp
    (59) exp -> . exp AND exp
    (60) exp -> . exp OR exp
    (61) exp -> . NOT exp
    (70) exp -> . ID LRB RRB
    (71) exp -> . ID LRB explist RRB
    (26) const -> . FLOATNUMBER
    (27) const -> . INTEGERNUMBER
    (62) const -> . TRUE
    (63) const -> . FALSE
    (47) relopexp -> . exp GT exp
    (48) relopexp -> . exp LT exp
    (49) relopexp -> . exp NE exp
    (50) relopexp -> . exp EQ exp
    (51) relopexp -> . exp LE exp
    (52) relopexp -> . exp GE exp
    (53) relopexp -> . relopexp GT exp
    (54) relopexp -> . relopexp LT exp
    (55) relopexp -> . relopexp NE exp
    (56) relopexp -> . relopexp EQ exp
    (57) relopexp -> . relopexp LE exp
    (58) relopexp -> . relopexp GE exp

    ID              shift and go to state 24
    SUB             shift and go to state 26
    LRB             shift and go to state 28
    NOT             shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    INTEGERNUMBER   shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    exp                            shift and go to state 35
    const                          shift and go to state 27
    relopexp                       shift and go to state 29

state 17

    (1) program -> declist MAIN LRB RRB . block
    (28) block -> . LCB stmtlist RCB

    LCB             shift and go to state 37

    block                          shift and go to state 36

state 18

    (5) vardec -> idlist COLON type . SEMICOLON

    SEMICOLON       shift and go to state 38


state 19

    (6) type -> INTEGER .

    SEMICOLON       reduce using rule 6 (type -> INTEGER .)
    COMMA           reduce using rule 6 (type -> INTEGER .)
    RRB             reduce using rule 6 (type -> INTEGER .)
    LCB             reduce using rule 6 (type -> INTEGER .)


state 20

    (7) type -> FLOAT .

    SEMICOLON       reduce using rule 7 (type -> FLOAT .)
    COMMA           reduce using rule 7 (type -> FLOAT .)
    RRB             reduce using rule 7 (type -> FLOAT .)
    LCB             reduce using rule 7 (type -> FLOAT .)


state 21

    (8) type -> BOOLEAN .

    SEMICOLON       reduce using rule 8 (type -> BOOLEAN .)
    COMMA           reduce using rule 8 (type -> BOOLEAN .)
    RRB             reduce using rule 8 (type -> BOOLEAN .)
    LCB             reduce using rule 8 (type -> BOOLEAN .)


state 22

    (13) idlist -> idlist COMMA iddec .

    COLON           reduce using rule 13 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 13 (idlist -> idlist COMMA iddec .)


state 23

    (72) funcdec -> FUNCTION ID LRB . paramdecs RRB block
    (73) funcdec -> FUNCTION ID LRB . paramdecs RRB COLON type block
    (64) paramdecs -> . paramdecslist
    (65) paramdecs -> .
    (66) paramdecslist -> . paramdec
    (67) paramdecslist -> . paramdecslist COMMA paramdec
    (68) paramdec -> . ID COLON type
    (69) paramdec -> . ID LSB RSB COLON type

    RRB             reduce using rule 65 (paramdecs -> .)
    ID              shift and go to state 39

    paramdecs                      shift and go to state 40
    paramdecslist                  shift and go to state 41
    paramdec                       shift and go to state 42

state 24

    (14) exp -> ID . ASSIGN exp
    (21) exp -> ID .
    (22) exp -> ID . LSB exp RSB
    (23) exp -> ID . LSB exp RSB ASSIGN exp
    (70) exp -> ID . LRB RRB
    (71) exp -> ID . LRB explist RRB

    ASSIGN          shift and go to state 43
    SUM             reduce using rule 21 (exp -> ID .)
    SUB             reduce using rule 21 (exp -> ID .)
    DIV             reduce using rule 21 (exp -> ID .)
    MOD             reduce using rule 21 (exp -> ID .)
    MUL             reduce using rule 21 (exp -> ID .)
    AND             reduce using rule 21 (exp -> ID .)
    OR              reduce using rule 21 (exp -> ID .)
    GT              reduce using rule 21 (exp -> ID .)
    LT              reduce using rule 21 (exp -> ID .)
    NE              reduce using rule 21 (exp -> ID .)
    EQ              reduce using rule 21 (exp -> ID .)
    LE              reduce using rule 21 (exp -> ID .)
    GE              reduce using rule 21 (exp -> ID .)
    COLON           reduce using rule 21 (exp -> ID .)
    COMMA           reduce using rule 21 (exp -> ID .)
    RSB             reduce using rule 21 (exp -> ID .)
    RRB             reduce using rule 21 (exp -> ID .)
    SEMICOLON       reduce using rule 21 (exp -> ID .)
    LSB             shift and go to state 44
    LRB             shift and go to state 45


state 25

    (10) iddec -> ID ASSIGN exp .
    (15) exp -> exp . SUM exp
    (16) exp -> exp . SUB exp
    (17) exp -> exp . DIV exp
    (18) exp -> exp . MOD exp
    (19) exp -> exp . MUL exp
    (59) exp -> exp . AND exp
    (60) exp -> exp . OR exp
    (47) relopexp -> exp . GT exp
    (48) relopexp -> exp . LT exp
    (49) relopexp -> exp . NE exp
    (50) relopexp -> exp . EQ exp
    (51) relopexp -> exp . LE exp
    (52) relopexp -> exp . GE exp

    COLON           reduce using rule 10 (iddec -> ID ASSIGN exp .)
    COMMA           reduce using rule 10 (iddec -> ID ASSIGN exp .)
    SUM             shift and go to state 46
    SUB             shift and go to state 47
    DIV             shift and go to state 48
    MOD             shift and go to state 49
    MUL             shift and go to state 50
    AND             shift and go to state 51
    OR              shift and go to state 52
    GT              shift and go to state 53
    LT              shift and go to state 54
    NE              shift and go to state 55
    EQ              shift and go to state 56
    LE              shift and go to state 57
    GE              shift and go to state 58


state 26

    (24) exp -> SUB . exp
    (14) exp -> . ID ASSIGN exp
    (15) exp -> . exp SUM exp
    (16) exp -> . exp SUB exp
    (17) exp -> . exp DIV exp
    (18) exp -> . exp MOD exp
    (19) exp -> . exp MUL exp
    (20) exp -> . const
    (21) exp -> . ID
    (22) exp -> . ID LSB exp RSB
    (23) exp -> . ID LSB exp RSB ASSIGN exp
    (24) exp -> . SUB exp
    (25) exp -> . LRB exp RRB
    (46) exp -> . relopexp
    (59) exp -> . exp AND exp
    (60) exp -> . exp OR exp
    (61) exp -> . NOT exp
    (70) exp -> . ID LRB RRB
    (71) exp -> . ID LRB explist RRB
    (26) const -> . FLOATNUMBER
    (27) const -> . INTEGERNUMBER
    (62) const -> . TRUE
    (63) const -> . FALSE
    (47) relopexp -> . exp GT exp
    (48) relopexp -> . exp LT exp
    (49) relopexp -> . exp NE exp
    (50) relopexp -> . exp EQ exp
    (51) relopexp -> . exp LE exp
    (52) relopexp -> . exp GE exp
    (53) relopexp -> . relopexp GT exp
    (54) relopexp -> . relopexp LT exp
    (55) relopexp -> . relopexp NE exp
    (56) relopexp -> . relopexp EQ exp
    (57) relopexp -> . relopexp LE exp
    (58) relopexp -> . relopexp GE exp

    ID              shift and go to state 24
    SUB             shift and go to state 26
    LRB             shift and go to state 28
    NOT             shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    INTEGERNUMBER   shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    exp                            shift and go to state 59
    const                          shift and go to state 27
    relopexp                       shift and go to state 29

state 27

    (20) exp -> const .

    SUM             reduce using rule 20 (exp -> const .)
    SUB             reduce using rule 20 (exp -> const .)
    DIV             reduce using rule 20 (exp -> const .)
    MOD             reduce using rule 20 (exp -> const .)
    MUL             reduce using rule 20 (exp -> const .)
    AND             reduce using rule 20 (exp -> const .)
    OR              reduce using rule 20 (exp -> const .)
    GT              reduce using rule 20 (exp -> const .)
    LT              reduce using rule 20 (exp -> const .)
    NE              reduce using rule 20 (exp -> const .)
    EQ              reduce using rule 20 (exp -> const .)
    LE              reduce using rule 20 (exp -> const .)
    GE              reduce using rule 20 (exp -> const .)
    COLON           reduce using rule 20 (exp -> const .)
    COMMA           reduce using rule 20 (exp -> const .)
    RSB             reduce using rule 20 (exp -> const .)
    RRB             reduce using rule 20 (exp -> const .)
    SEMICOLON       reduce using rule 20 (exp -> const .)


state 28

    (25) exp -> LRB . exp RRB
    (14) exp -> . ID ASSIGN exp
    (15) exp -> . exp SUM exp
    (16) exp -> . exp SUB exp
    (17) exp -> . exp DIV exp
    (18) exp -> . exp MOD exp
    (19) exp -> . exp MUL exp
    (20) exp -> . const
    (21) exp -> . ID
    (22) exp -> . ID LSB exp RSB
    (23) exp -> . ID LSB exp RSB ASSIGN exp
    (24) exp -> . SUB exp
    (25) exp -> . LRB exp RRB
    (46) exp -> . relopexp
    (59) exp -> . exp AND exp
    (60) exp -> . exp OR exp
    (61) exp -> . NOT exp
    (70) exp -> . ID LRB RRB
    (71) exp -> . ID LRB explist RRB
    (26) const -> . FLOATNUMBER
    (27) const -> . INTEGERNUMBER
    (62) const -> . TRUE
    (63) const -> . FALSE
    (47) relopexp -> . exp GT exp
    (48) relopexp -> . exp LT exp
    (49) relopexp -> . exp NE exp
    (50) relopexp -> . exp EQ exp
    (51) relopexp -> . exp LE exp
    (52) relopexp -> . exp GE exp
    (53) relopexp -> . relopexp GT exp
    (54) relopexp -> . relopexp LT exp
    (55) relopexp -> . relopexp NE exp
    (56) relopexp -> . relopexp EQ exp
    (57) relopexp -> . relopexp LE exp
    (58) relopexp -> . relopexp GE exp

    ID              shift and go to state 24
    SUB             shift and go to state 26
    LRB             shift and go to state 28
    NOT             shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    INTEGERNUMBER   shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    exp                            shift and go to state 60
    const                          shift and go to state 27
    relopexp                       shift and go to state 29

state 29

    (46) exp -> relopexp .
    (53) relopexp -> relopexp . GT exp
    (54) relopexp -> relopexp . LT exp
    (55) relopexp -> relopexp . NE exp
    (56) relopexp -> relopexp . EQ exp
    (57) relopexp -> relopexp . LE exp
    (58) relopexp -> relopexp . GE exp
